# jiatech-mes

./: .gitignore
jiatech-mes/: README.md  README_zh_CN.md  agent.md  agent_zh_CN.md  alembic.ini  architecture.md  architecture_zh_CN.md  coding-standards.md  coding-standards_zh_CN.md  modules.md  modules_zh_CN.md  pyproject.toml  roadmap.md  roadmap_zh_CN.md  skill.md  skill_zh_CN.md
jiatech-mes/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
jiatech-mes/frontend/src/: App.tsx  index.css  main.tsx
jiatech-mes/frontend/src/api/: client.ts
jiatech-mes/frontend/src/components/: MainMenu.tsx
jiatech-mes/frontend/src/hooks/: useMesApi.ts
jiatech-mes/frontend/src/pages/: AlmPage.tsx  Dashboard.tsx  EquipmentList.tsx  LotList.tsx  PmsPage.tsx  ProductList.tsx  QmsPage.tsx  SpcPage.tsx
jiatech-mes/frontend/src/types/: mes.ts
jiatech-mes/migrations/: env.py
jiatech-mes/migrations/versions/: 001_initial.py  002_wip.py  003_mm.py
jiatech-mes/src/jiatech_mes/: __init__.py  main.py
jiatech-mes/src/jiatech_mes/api/: __init__.py  mes_api.py
jiatech-mes/src/jiatech_mes/cli/: __init__.py  command.py  database.py  module.py  server.py
jiatech-mes/src/jiatech_mes/modules/alm/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/alm/models/: __init__.py  mes_alm.py
jiatech-mes/src/jiatech_mes/modules/base/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/base/models/: __init__.py  res_partner.py
jiatech-mes/src/jiatech_mes/modules/edc/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/edc/models/: __init__.py  mes_edc.py
jiatech-mes/src/jiatech_mes/modules/mm/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/mm/models/: __init__.py  mes_product.py
jiatech-mes/src/jiatech_mes/modules/pms/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/pms/models/: __init__.py  mes_pms.py
jiatech-mes/src/jiatech_mes/modules/qms/: __manifest__.py
jiatech-mes/src/jiatech_mes/modules/qms/models/: __init__.py  mes_qms.py
jiatech-mes/src/jiatech_mes/modules/ras/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/ras/models/: __init__.py  mes_equipment.py
jiatech-mes/src/jiatech_mes/modules/spc/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/spc/models/: __init__.py  mes_spc.py
jiatech-mes/src/jiatech_mes/modules/tcard/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/tcard/models/: __init__.py  mes_tcard.py
jiatech-mes/src/jiatech_mes/modules/wip/: __init__.py  __manifest__.py
jiatech-mes/src/jiatech_mes/modules/wip/models/: __init__.py  mes_lot.py
jiatech-mes/src/jiatech_mes/orm/: __init__.py  api.py  domain.py  environment.py  fields.py  models.py  recordset.py  registry.py
jiatech-mes/tests/: __init__.py  conftest.py  test_orm_api.py  test_orm_fields.py  test_orm_models.py  test_orm_registry.py  test_wip_module.py
